--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: Tea Time
-subtitle: Blog, scrapbook, and virtual space for my experiments.
+title: Herb Mueller's Website
+subtitle: A shrine to myself
 use-site-title: true
 ---
 
